<resources>
    <string name="app_name">فال حافظ پیشرفته</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">فال حافظ پیشرفته</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">به اشتراک گذاری برنامه</string>
    <string name="menu_send">Send</string>
    <string name="menu_rating">امتیاز دهی به برنامه</string>
    <string name="menu_all">تمام فال ها</string>
    <string name="menu_fav">لیست علاقه مندی ها</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sampleEvaluation">بسیار انسان سخت کوش و پشتکاری هستید و تا نتیجه ی کار حاصل نشود دست از عمل برنمی دارید. نتایج کارتان همیشه ماندنی است و بقیه نیز از آن استفاده می کنند. شما تا آخرین لحظات زندگی به تمام آرزوهایتان خواهید رسید. به فقرا کمک کنید. نام شما و ذکر خیرتان همه جا بر سر زبانهاست.</string>
    <string name="doa">ای حافظ شیرازی! تو محرم هر رازی! تو را به خدا و شاخه نبات قسمت میدهم که هرچه صلاح و مصلحت می بینی برایم اشکار و آرزوی من بر آورده سازی. (شاید بهتر باشد برای شادی روح حضرت حافظ صلوات یا فاتحه ای نثار نماییم)</string>
    <string name="niat_konid">نیت کنید و روی گنبد حضرت حافظ اشارتی بفرمایید.</string>
    <string name="add_to_faves">افزودن به علاقه مندی ها</string>
    <string name="rate_us">امتیاز دهی به برنامه</string>
    <string name="more_info">اطلاعات بیشتر</string>
    <string name="more_info_tv">این فال حافظ دارای روشی کاملا متفاوت برای تفال زدن می باشد. بر خلاف روش های ماشینی و الگوریتم های ریاضی که تقریبا همیشه استفاده می شوند. از روش های طبیعی و به کمک حرکت انگشتان شما بر روی صفحه برای شما فال می گیرد.\
    هنگامی که صفحه نیت برای شما نمایش داده می شود. از شما خواهش می شود که انگشتتان را بر روی صفحه بکشید. با این کار برنامه عددی را به صورت کاملا تصادفی که برای تعیین فال شما مورد نیاز است به کمک حرکت انگشتان شما, نحوه حرکت آن و زمانی که دست شما بر روی صفحه حرکت می کرده به دست می آورد.\
    ما در واقع برای طبیعی تر بودن و درست تر بودن نتیجه فال دقیقا همانند فال واقعی از دستان شما کمک می گیریم و نتیجه فال کاملا بستگی به نحوه گشایش فال توسط شما دارد.</string>
    <string name="text1">در موضوع تعبیر و تفسیر تفال و فال های گوناگونی که در بسیاری از سایت ها دیده می شود کپی برداری های مکرر, استفاده از تعبیر های نادرست و متاسفانه ایجاد دغدغه ها, اضطراب و نگرانی های ناخواسته در فکر علاقمندان به فال از جمله موضوعات مهم و قابل بحث بی باشد.</string>
    <string name="text2">دوم, یکی از سخنان ما این است که تعبیر هر یک از اشعار در تفال شما به دیوان حافظ, شمس, مولانا و دیگر شعرای بزرگ به غیر از معنی و مفهوم عام, دارای تعبیر انحصاری و مختص خود شخص است و لذا می بایست توسط فردی دارای شناخت و تجربه کافی نسبت به احوال و روح شعر, برای شما تفسیر, تعبیر , تبیین گردد.</string>
    <string name="text3">سوم این که در بسیاری از تعبیر ها ممکن است مسایلی بیان شده باشد که نزدیک به مشخصات افرادی در پیرامون شما بوده و یا ذهن شما را کنجکاو نماید که شخصی را در دوستان و آشنایان خود جست و جو نمایید و نسبت به وی هشدار هشدارهایی که به شما داده است را بکار گیرید و این درحالی است که آن شخص مد نظر فالگو نبود است. لذا جدا به شما توصیه می نماییم از این گونه موارد و موارد مشابه کاملا پرهیز نمایید و دهن پاک خود را آلوده به گناه و غیبت نسازید که در این صورت راه را به اشتباه رفته اید.</string>
    <string name="text4">یادمان باشد تفال, آدابی مخصوص به خود را دارد و بایستی در زمان درست و با نیت صحیح و خیر انجام شود.</string>
    <string name="text5">نکته دیگر این که توصیه با به شمادر انجام کارهایتان و حل مشکلات روزانه, مشورت با افراد دلسوز و با تجربه می باشد و نه این که یک فال را مبنای تصمیم گیری خود در موضوعات مهم زندگی قرار دهید</string>
    <string name="search_hint">جست و جو کنید</string>
    <string name="send_to">ارسال به</string>

</resources>
