<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    android:label='"فال حافظ"'
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.mohsen.falehafez_new.ui.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_nav_home_to_hafezFragment"
            app:destination="@id/hafezFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_all"
        android:name="com.mohsen.falehafez_new.ui.ui.gallery.GalleryFragment"
        android:label="@string/menu_fav"
        tools:layout="@layout/fragment_gallery">
        <action
            android:id="@+id/action_nav_all_to_hafezFragment"
            app:destination="@id/hafezFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_rating"
        android:name="com.mohsen.falehafez_new.ui.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_faves"
        android:name="com.mohsen.falehafez_new.ui.ui.faves.FavesFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" >
        <action
            android:id="@+id/action_nav_faves_to_hafezFragment"
            app:destination="@id/hafezFragment" />
    </fragment>

<!--    <fragment-->
<!--        android:id="@+id/nav_share"-->
<!--        android:name="com.mohsen.falehafez_new.ui.ui.share.ShareFragment"-->
<!--        android:label="@string/menu_share"-->
<!--        tools:layout="@layout/fragment_share" />-->

    <fragment
        android:id="@+id/nav_send"
        android:name="com.mohsen.falehafez_new.ui.ui.send.ReadMoreFragment"
        android:label="چند نکته مهم و خواندنی"
        tools:layout="@layout/fragment_send" />
    <fragment
        android:id="@+id/hafezFragment"
        android:name="com.mohsen.falehafez_new.ui.ui.hafez.HafezFragment"
        android:label="فال حافظ"
        tools:layout="@layout/fragment_hafez">
        <argument
            android:name="poemIndex"
            app:argType="string" />
    </fragment>
</navigation>