<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/hafezTomb"
        android:src="@drawable/hafez"
        android:scaleType="centerCrop"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <LinearLayout
        android:orientation="vertical"
        android:background="#CC241C1F"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/doa"
            android:textAlignment="center"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:textSize="18sp"
            android:layout_marginTop="8dp"
            android:paddingBottom="4dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:text="@string/niat_konid"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/moreInfo"
            android:textSize="12dp"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:text="@string/more_info"
            android:background="@drawable/more_info_btn_bg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>